스프린트 미션7: DTO 적극 도입하기 (미션 6 내용) JCF*Service, File*Service 삭제